[package]
name = "radio-conductor"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = "0.24.1"
egui = "0.24.1"
rfd = "0.12.1"  # For file dialogs
rodio = "0.17.3"  # For audio playback
symphonia = { version = "0.5.3", features = ["mp3", "wav"] }  # For audio decoding
egui_plot = "0.24.1"  # For waveform visualization
serde = { version = "1.0", features = ["derive"] }  # For serialization
bincode = "1.3"
serde_json = "1.0"
